Allow disabling 'cycle through bookmarks' behaviour

BUG: 499268